<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/charDetailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseRaceActivity">

    <TextView
        android:id="@+id/raceQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/greatadventurebold"
        android:text="@string/raceChoice"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raceQ">

        <Button
            android:id="@+id/Dwarf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="chooseRace"
            android:textSize="32sp"
            android:text="@string/dwarf" />

        <Button
            android:id="@+id/Elf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="chooseRace"
            android:textSize="32sp"
            android:text="@string/elf" />

        <Button
            android:id="@+id/Orc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="chooseRace"
            android:textSize="32sp"
            android:text="@string/orc" />

        <Button
            android:id="@+id/Human"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="chooseRace"
            android:textSize="32sp"
            android:text="@string/human" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>